# win32_c-_game_plane

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt
src/: main.cpp  resources.rc
